unpackaged/main/default/objects/Prescription__c/Prescription__c.object-meta.xml
<CustomObject>
    <label>Prescription</label>
    <nameField>
        <displayFormat>P {00000}</displayFormat>
        <label>Prescription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>