unpackaged/main/default/objects/Prescription__c/fields/Final_Prescription_Image_Attached__c.field-meta.xml
<CustomField>
    <fullName>Final_Prescription_Image_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do not check this box until you have uploaded an image of the prescription that is approved for use.</inlineHelpText>
    <label>Final Prescription Image Attached</label>
    <type>Checkbox</type>
</CustomField>