unpackaged/main/default/objects/Prescription__c/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field should contain the Patient's GP's Contact record</inlineHelpText>
    <label>GP</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Relationship_to_Vitaflo__c</field>
            <operation>equals</operation>
            <value>Healthcare Professional</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prescriptions (GP)</relationshipLabel>
    <relationshipName>GPPrescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>