unpackaged/main/default/objects/Prescription__c/fields/Original_Prescription__c.field-meta.xml
<CustomField>
    <fullName>Original_Prescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Prescription</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Patient__c</field>
            <operation>equals</operation>
            <valueField>$Source.Patient__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prescription__c</referenceTo>
    <relationshipLabel>Sub-Prescriptions</relationshipLabel>
    <relationshipName>SubPrescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>