unpackaged/main/default/objects/Prescription__c/fields/Patient_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Patient_Diagnosis__c</fullName>
    <formula>TEXT(Patient__r.XPatient_Diagnosis__c)</formula>
    <label>Patient Diagnosis</label>
    <type>Text</type>
</CustomField>