unpackaged/main/default/objects/Prescription__c/fields/Patient_Order__c.field-meta.xml
<CustomField>
    <fullName>Patient_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient Order</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Patient Order must be for same patient</errorMessage>
        <filterItems>
            <field>Patient_Order__c.Patient__c</field>
            <operation>equals</operation>
            <valueField>$Source.Patient__c</valueField>
        </filterItems>
        <infoMessage>Patient Order must be for same patient</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Patient_Order__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>