unpackaged/main/default/objects/Prescription__c/fields/Prescription_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Notes__c</fullName>
    <label>Prescription Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>