unpackaged/main/default/objects/Prescription__c/fields/Prescription_Received__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Received__c</fullName>
    <inlineHelpText>When was the correct/usable prescription received?</inlineHelpText>
    <label>Prescription Received</label>
    <type>Date</type>
</CustomField>