unpackaged/main/default/objects/Prescription__c/fields/Prescription_Requested__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Requested__c</fullName>
    <label>Prescription Requested</label>
    <type>DateTime</type>
</CustomField>