unpackaged/main/default/objects/Prescription__c/fields/Regime__c.field-meta.xml
<CustomField>
    <fullName>Regime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regime</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Regime must be for same Patient</errorMessage>
        <filterItems>
            <field>Regime__c.Patient__c</field>
            <operation>equals</operation>
            <valueField>$Source.Patient__c</valueField>
        </filterItems>
        <infoMessage>Regime must be for same Patient</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Regime__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>